# epaper-home-assistant-display

./: .dockerignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
python/: main.py
src/: converter.cpp  converter.h  epaper_display.cpp  epaper_display.h  filesystem_monitor.cpp  filesystem_monitor.h  ir_sensor.cpp  ir_sensor.h  main-monochromer.cpp  main.cpp  main.py  monochromer.cpp  monochromer.h  monochromer.py  utils.hh
